force-app/main/default/objects/NTE_Email_Dispatch__c/NTE_Email_Dispatch__c.object-meta.xml
<CustomObject>
    <description>Individual NTE invitation, reminder, booking-confirmation and email requests and outcomes.</description>
    <label>NTE Email Dispatch</label>
    <nameField><displayFormat>NTE-EMAIL-{000000}</displayFormat><label>Dispatch Number</label><type>AutoNumber</type></nameField>
    <pluralLabel>NTE Email Dispatches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>