force-app/main/default/objects/NTE_Email_Dispatch__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Recipient Contact</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>NTE email dispatches</relationshipLabel>
    <relationshipName>NTE_Email_Dispatches_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>