force-app/main/default/objects/NTE_Email_Dispatch__c/fields/Dispatch_Key__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Key__c</fullName>
    <label>Dispatch Key</label>
    <length>100</length>
    <externalId>true</externalId>
    <unique>true</unique>
    <type>Text</type>
</CustomField>