force-app/main/default/objects/NTE_Email_Dispatch__c/fields/Error__c.field-meta.xml
<CustomField>
    <fullName>Error__c</fullName>
    <label>Send Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>