force-app/main/default/objects/NTE_Email_Dispatch__c/fields/Fingerprint__c.field-meta.xml
<CustomField>
    <fullName>Fingerprint__c</fullName>
    <label>Recipient Snapshot</label>
    <length>64</length>
    <type>Text</type>
</CustomField>