force-app/main/default/objects/NTE_Email_Dispatch__c/fields/Kind__c.field-meta.xml
<CustomField>
    <fullName>Kind__c</fullName>
    <label>Email Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>