force-app/main/default/objects/NTE_Email_Dispatch__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <label>Interest</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>NTE email dispatches</relationshipLabel>
    <relationshipName>NTE_Email_Dispatches_Lead</relationshipName>
    <type>Lookup</type>
</CustomField>