force-app/main/default/objects/NTE_Email_Dispatch__c/fields/Link__c.field-meta.xml
<CustomField>
    <fullName>Link__c</fullName>
    <label>Action Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>