force-app/main/default/objects/NTE_Email_Dispatch__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Booking</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>NTE email dispatches</relationshipLabel>
    <relationshipName>NTE_Email_Dispatches_Opportunity</relationshipName>
    <type>Lookup</type>
</CustomField>