force-app/main/default/objects/NTE_Email_Dispatch__c/fields/Recipient__c.field-meta.xml
<CustomField>
    <fullName>Recipient__c</fullName>
    <label>Email Address</label>
    <type>Email</type>
</CustomField>