force-app/main/default/objects/NTE_Email_Dispatch__c/fields/Run_Id__c.field-meta.xml
<CustomField>
    <fullName>Run_Id__c</fullName>
    <label>Send Batch</label>
    <length>64</length>
    <type>Text</type>
</CustomField>