force-app/main/default/objects/NTE_Email_Dispatch__c/listViews/NTE_Email_Failures.listView-meta.xml
<ListView>
    <fullName>NTE_Email_Failures</fullName>
    
    <columns>NAME</columns>
    <columns>Kind__c</columns>
    <columns>Recipient__c</columns>
    <columns>Event_Code__c</columns>
    <columns>Status__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Lead__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters><field>Status__c</field><operation>equals</operation><value>Failed</value></filters>
    <label>NTE Email Failures</label>
</ListView>