force-app/main/default/objects/NTE_Email_Dispatch__c/listViews/NTE_Recent_Emails.listView-meta.xml
<ListView>
    <fullName>NTE_Recent_Emails</fullName>
    
    <columns>NAME</columns>
    <columns>Kind__c</columns>
    <columns>Recipient__c</columns>
    <columns>Status__c</columns>
    <columns>Sent_At__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Lead__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    
    <label>NTE Recent Emails</label>
</ListView>